--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
-    "fumadocs-core": "15.8.4",
-    "fumadocs-mdx": "12.0.3",
-    "fumadocs-ui": "15.8.4",
+    "fumadocs-core": "^16.1.0",
+    "fumadocs-mdx": "^14.0.3",
+    "fumadocs-ui": "^16.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.22",
@@ -46,15 +46,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/mdx": "^2.0.13",
     "@types/node": "24.6.2",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
