--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
-    "fumadocs-core": "^16.1.0",
-    "fumadocs-mdx": "^14.0.3",
-    "fumadocs-ui": "^16.1.0",
+    "fumadocs-core": "15.8.4",
+    "fumadocs-mdx": "12.0.3",
+    "fumadocs-ui": "15.8.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.22",
